# ai_screening_app

./: CLAUDE.md  README.md
.claude/agents/: backend-builder.md  code-reviewer.md  frontend-builder.md  issue-explorer.md  spec-critic.md  test-builder-backend.md  test-builder-frontend.md
.claude/commands/: create-issue.md  work-issue.md
backend/: .env.example  .gitignore  README.md  config.py  db.py  main.py  models.py  pyproject.toml  schemas.py
backend/routers/: __init__.py  candidates.py  jobs.py
backend/services/: __init__.py  llm.py  matching.py  structuring.py
backend/tests/: conftest.py  test_candidates_api.py  test_config.py  test_db_models.py  test_health.py  test_jobs_api.py  test_llm.py  test_llm_claude.py  test_matching.py  test_structuring.py
docs/: 00_index.md  01_overview.md  02_what.md
docs/03_how/: 01_architecture.md  02_ai.md  03_data-model.md  04_api.md  05_setup.md  06_testing.md  07_model-characteristics.md
frontend/: .env.local.example  .gitignore  package-lock.json  package.json  vitest.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: global-header.tsx  tag-input.tsx  (+1 more)
issues/: 001-backend-scaffold.md  002-frontend-scaffold.md  003-job-parse-backend.md  004-job-parse-frontend.md  005-candidate-parse-backend.md  006-candidate-parse-frontend.md  007-matching-backend.md  008-matching-frontend.md  009-global-header.md  010-job-list-ranking-link.md  011-ranking-title-and-home.md  012-saved-job-requirements-view.md  013-job-requirement-loading-ui.md  014-remove-job-employment-location-remote.md  README.md  TEMPLATE.md
(+20 files in other folders)
